[metadata]
name = Flask_Cli
version = attr: flask_cli.__version__
url='https://github.com/DonalChilde/flask_cli'
description = Examples of different ways to make a custom cli in Flask
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = cli Flask Python
license="MIT license",
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    'License :: OSI Approved :: MIT License'
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:

[options.entry_points]



[options.package_data]
* = *.txt, *.rst
hello = *.msg


[options.packages.find]
where=src


# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3



# [options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg